--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ langchain-google-vertexai==3.1.0
 
 chromadb==1.3.5
 langchain-chroma==1.0.0
+mistune==3.1.4
 
 langchain-mcp-adapters==0.1.14
 mcp[cli]==1.22.0
